# ai

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ai-interface/: Cargo.toml  README.md
crates/ai-interface/src/: audio_transcriber.rs  lib.rs  logger.rs  messages.rs  mock_audio_transcriber.rs  mock_model.rs  model.rs  router.rs  tools.rs  usage.rs
crates/ai-interface/src/_tests_/: messages_tests.rs  mock_model_tests.rs  mod.rs  output_tests.rs  router_tests.rs
crates/ai-interface/src/output/: envelope.rs  error.rs  id.rs  inline.rs  mod.rs  read_request.rs  reason.rs  window.rs
crates/ai-mcp/: Cargo.toml  README.md
crates/ai-mcp-oauth/: Cargo.toml  README.md
crates/ai-mcp-oauth/src/: auth_hook.rs  clock.rs  config.rs  error.rs  error_kinds.rs  lib.rs  metadata.rs  pkce.rs  random.rs  registration.rs  registration_types.rs  resource.rs  selector.rs  state.rs  store.rs  token.rs  url_policy.rs  user_agent.rs
crates/ai-mcp-oauth/src/_tests_/: auth_hook_tests.rs  config_tests.rs  mod.rs  pkce_tests.rs  redaction_tests.rs  registration_tests.rs  resource_tests.rs  state_tests.rs  token_tests.rs  transport_tests.rs  url_policy_adversarial_tests.rs  url_policy_tests.rs
crates/ai-mcp-oauth/src/_tests_/discovery/: cache_tests.rs  mod.rs  support.rs  validation_tests.rs
crates/ai-mcp-oauth/src/_tests_/manager/: authorize_flow_tests.rs  authorize_tests.rs  disconnect_tests.rs  mod.rs  refresh_tests.rs  request_token_tests.rs  support.rs  token_endpoint_tests.rs
crates/ai-mcp-oauth/src/discovery/: cache.rs  mod.rs  parsing.rs
crates/ai-mcp-oauth/src/manager/: authorize.rs  disconnect.rs  mod.rs  refresh.rs  token_endpoint.rs  types.rs
crates/ai-mcp-oauth/src/transport/: mod.rs  reqwest.rs
crates/ai-mcp-oauth/tests/: oauth_integration.rs
crates/ai-mcp-oauth/tests/oauth_integration/: failure_tests.rs  flow_tests.rs  scope_tests.rs
crates/ai-mcp-oauth/tests/support/: mod.rs  store.rs  user_agent.rs
crates/ai-mcp-oauth/tests/support/server/: mcp.rs  mod.rs  oauth.rs
crates/ai-mcp/src/: authorization.rs  client.rs  client_operations.rs  client_request.rs  client_response.rs  config.rs  error.rs  lib.rs  tool_set.rs  tool_set_naming.rs  tool_set_result.rs
crates/ai-mcp/src/_tests_/: authorization_tests.rs  config_tests.rs  mod.rs  protocol_tests.rs  sse_tests.rs
crates/ai-mcp/src/_tests_/client/: error_tests.rs  lifecycle_tests.rs  mod.rs  sse_side_message_tests.rs  support.rs
crates/ai-mcp/src/_tests_/tool_set/: call_tests.rs  mod.rs  naming_tests.rs  support.rs
crates/ai-mcp/src/protocol/: content.rs  content_serde.rs  initialize.rs  mod.rs  rpc.rs  tools.rs
crates/ai-mcp/src/transport/: mod.rs  reqwest.rs  sse.rs
crates/ai-mcp/tests/: authorization_transport_tests.rs  json_transport_tests.rs  sse_transport_tests.rs  tool_runtime_smoke.rs
crates/ai-mcp/tests/support/: mod.rs
crates/ai-models-anthropic/: Cargo.toml  README.md
crates/ai-models-anthropic/src/: catalog.rs  lib.rs
crates/ai-models-anthropic/src/anthropic/: mod.rs  request.rs  response.rs
crates/ai-models-anthropic/src/anthropic/_tests_/: anthropic_multimodal_tests.rs  (+3 more)
crates/ai-models-core/: Cargo.toml  README.md
crates/ai-models-core/src/: catalog.rs  concurrency.rs  errors.rs  lib.rs  pricing.rs  retrying.rs  sleeper.rs  tool_call_identity.rs
crates/ai-models-core/src/_tests_/: catalog_tests.rs  concurrency_tests.rs  errors_tests.rs  mod.rs  pricing_tests.rs  retrying_tests.rs  structured_output_tests.rs  tool_call_identity_tests.rs
crates/ai-models-google/: Cargo.toml  README.md
crates/ai-models-google/src/: catalog.rs  lib.rs
crates/ai-models-google/src/google/: mod.rs  request.rs  response.rs
crates/ai-models-multi/: Cargo.toml  README.md
crates/ai-models-multi/src/: lib.rs
crates/ai-models-multi/src/_tests_/: multi_tests.rs
crates/ai-models-openai/: Cargo.toml  README.md
crates/ai-models-openai/src/: catalog.rs  lib.rs
crates/ai-models-openai/src/openai/: mod.rs  request.rs  request_types.rs  response.rs  transcription.rs
crates/ai-models-openai/src/openai/_tests_/: openai_reasoning_replay_tests.rs  openai_response_tests.rs  openai_structured_finish_tests.rs  openai_tests.rs  openai_thinking_tests.rs  openai_transcription_tests.rs
crates/ai-models-openai/src/openai/_tests_/openai_response/: finish_tests.rs  mod.rs  reasoning_tests.rs  usage_tests.rs
crates/ai-models-openai/src/openai/response/: finish.rs  mod.rs  output.rs  types.rs
crates/ai-models-xai/: Cargo.toml  README.md
crates/ai-models-xai/src/: catalog.rs  lib.rs
crates/ai-models-xai/src/_tests_/: catalog_tests.rs
crates/ai-models-xai/src/xai/: mod.rs  request.rs  request_types.rs  response.rs
crates/ai-tool-calling/: Cargo.toml  README.md
crates/ai-tool-calling/src/: error.rs  intrinsic.rs  lib.rs  policy.rs  runtime.rs  tool_output.rs
crates/ai-tool-calling/src/_tests_/: conversation_runtime_tests.rs  intrinsic_reader_tests.rs  mod.rs  output_id_generation_tests.rs  output_store_tests.rs  policy_tests.rs  support.rs  turn_error_logging_tests.rs
crates/ai-tool-calling/src/_tests_/turn_execution/: checkpoint_tests.rs  conversation_tests.rs  error_tests.rs  mod.rs  operation_id_tests.rs  output_pagination_tests.rs  output_windowing_tests.rs  tool_tests.rs
crates/ai-tool-calling/src/output_store/: error.rs  id_generator.rs  memory.rs  mod.rs  types.rs  windowing.rs
crates/ai-tool-calling/src/turn/: active_turn.rs  failures.rs  mod.rs  response.rs  tool_dispatch.rs  types.rs
crates/json-http/: Cargo.toml  README.md
crates/json-http/src/: auth.rs  client.rs  error.rs  lib.rs  request.rs
crates/json-http/src/_tests_/: mod.rs  request_tests.rs
docs/protocol/: ai-mcp.md  mcp-oauth.md  tool-output-management.md
plans/: README.md  ai-mcp-crate.md  ai-mcp-oauth.md  copy-ai-crates-from-juno.md  universal-tool-output-management.md
xtask/: Cargo.toml  README.md
xtask/src/: check.rs  cli.rs  command.rs  error.rs  file_length.rs  main.rs  review.rs  smoke.rs  workspace.rs
xtask/src/_tests_/: file_length_tests.rs  main_tests.rs
(+14 files in other folders)
