[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
ai-interface.workspace = true
ai-models-anthropic.workspace = true
ai-models-google.workspace = true
ai-models-openai.workspace = true
ai-models-xai.workspace = true
ai-tool-calling.workspace = true
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
json-http.workspace = true
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
