[package]
name = "ai-mcp-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = ["dep:unimock"]

[dependencies]
ai-mcp = { workspace = true }
async-trait = "0.1.91"
base64 = "0.23.0"
futures-util = "0.3.33"
getrandom = "0.4.3"
json-http = { workspace = true }
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "rustls", "stream"] }
secrecy = "0.10.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["net", "sync", "time"] }
unimock = { version = "0.6.8", optional = true }
url = "2.5.8"

[dev-dependencies]
axum = "0.8.9"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
unimock = "0.6.8"
