[package]
name = "ai-models-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-interface.workspace = true
async-trait = "0.1.89"
jsonschema = { version = "0.46.4", default-features = false }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "time"] }

[dev-dependencies]
ai-interface = { workspace = true, features = ["test-support"] }
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
unimock = "0.6.8"
