[package]
name = "ai-models-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-interface.workspace = true
ai-models-core.workspace = true
async-trait = "0.1.89"
json-http.workspace = true
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
json-http = { workspace = true, features = ["test-support"] }
tokio = { version = "1.52.1", features = ["macros", "rt"] }
unimock = "0.6.8"
