[package]
name = "ai-tool-calling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = ["ai-interface/test-support"]

[dependencies]
ai-interface.workspace = true
async-trait = "0.1.89"
parking_lot = "0.12.5"
serde_json = "1.0.149"
thiserror = "2.0.18"
unimock = "0.6.8"

[dev-dependencies]
ai-interface = { workspace = true, features = ["test-support"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt"] }
