[package]
name = "json-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
test-support = ["dep:unimock"]

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
unimock = { version = "0.6.8", optional = true }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt"] }
unimock = "0.6.8"
